# adumbra

./: .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose-ia-gpu.yml  docker-compose.yml
.github/workflows/: linting.yml  test.yml
backend/: .gitignore  README.md  pyproject.toml  requirements-dev-pinned.txt  requirements-pinned.txt  update_requirements.py
backend/adumbra/: constants.py  gunicorn_config.py
backend/adumbra/config/: __init__.py  config.py  version_util.py
backend/adumbra/database/: __init__.py  annotations.py  assistant.py  categories.py  datasets.py  events.py  exports.py  ia_config.py  images.py  lisence.py  mongo_shim.py  tasks.py  users.py
backend/adumbra/database/helpers/: images.py
backend/adumbra/drawinsight_wrapper/: drawinsight_wrapper.py
backend/adumbra/ia/: __init__.py  api.py
backend/adumbra/ia/api/: __init__.py  models.py
backend/adumbra/ia/util/: __init__.py  helpers.py  sam2.py  segmentation_helpers.py  zim.py
backend/adumbra/services/: thumbnail.py
backend/adumbra/tests/: conftest.py  test_app.py
backend/adumbra/tests/api/: test_category.py  test_image.py  test_info.py  test_user.py
backend/adumbra/tests/models/: test_upsert.py
backend/adumbra/types/: __init__.py  assistants.py  requests.py
backend/adumbra/util/: api_bridge.py
backend/adumbra/webserver/: __init__.py  authentication.py  sockets.py  watcher.py
backend/adumbra/webserver/api/: __init__.py  admin.py  annotations.py  annotator.py  categories.py  datasets.py  exports.py  images.py  info.py  tasks.py  undo.py  users.py
backend/adumbra/webserver/controllers/: images.py
backend/adumbra/webserver/util/: __init__.py  coco_util.py  pagination_util.py  query_util.py  thumbnails.py
backend/adumbra/workers/: __init__.py  socket.py
backend/adumbra/workers/tasks/: __init__.py  data.py  scan.py  test.py  thumbnails.py  volume_split.py
backend/adumbra/workers/tasks/helpers/: drawinsight_helpers.py  drawinsight_test.py  utils.py
backend/requirements-ia/: install_requirements.py  requirements.in  sam2.in  zim.in
backend/scripts/: run_celery.sh  run_ia.sh  run_webserver.sh
client/: .prettierrc  index.html  openapi-ts.config.ts  package.json  tsconfig.json  vite.config.js
client/src/: App.vue  main.js  router.js
client/src/assistants-api/: sdk.gen.ts  types.gen.ts
client/src/components/: GenericDialog.vue  NavBar.vue
client/src/components/annotator/: Annotation.vue  Category.vue
client/src/components/annotator/panels/: BBoxPanel.vue  BrushPanel.vue  EraserPanel.vue  KeypointPanel.vue  MagicWandPanel.vue  PolygonPanel.vue  Sam2Panel.vue  SelectPanel.vue  (+2 more)
client/src/components/cards/: AssistantCard.vue  CardBase.vue  CategoryCard.vue  DatasetCard.vue  ImageCard.vue
client/src/components/dataset/: ExportsTab.vue  GenericDialog.vue  ImagesTab.vue  Navbar.vue
client/src/components/tasks/: TaskGroup.vue
client/src/composables/toolBar/: tools.js
client/src/models/: assistants.js  datasets.js  images.js  models.js  tasks.js
client/src/store/: info.js  user.js
client/src/views/: Annotator.vue  Assistants.vue  Auth.vue  Categories.vue  Dataset.vue  Datasets.vue  Tasks.vue
compose-extensions/: compose-base-service.yml  dev-environment.yml  docker-compose-helpers.yml  ia-cpu.yml  ia-gpu.yml  networks-volumes.yml
xrayrecon/: README.md  pyproject.toml
xrayrecon/xrayrecon/: layerseg.py
(+4 files in other folders)
