[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "xrayrecon"
description = "Turn 3D X-ray volumes into 2D PCB layers"
authors = [{ name = "Nathan Jessurun", email = "nathan@terraverum.ai" }]
readme = "README.md"
requires-python = ">=3.8,<=3.12.9"
license = { text = "MIT" }
version = "0.1.1"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["xray", "pcb", "volumetric reconstruction"]
dependencies = [
    "fire",
    "imutils",
    "numpy",
    "pandas",
    "pyopengl",
    "pyqtgraph>=0.13.1",
    "qtextras >= 0.6.5",
    "s3a >= 0.7.0",
    "scipy",
    "scikit-image",
    "opencv-python-headless",
    "tqdm",
    "PySide6",
    "setuptools",             # This is actually required by S3A, but apparently not specified so _yet_
]

[project.urls]
Homepage = "https://github.com/TerraVerum/xrayrecon"
Source = "https://github.com/TerraVerum/xrayrecon"
Documentation = "https://github.com/TerraVerum/xrayrecon"

[tool.isort]
profile = "black"
reverse_relative = true
combine_as_imports = true

[tool.black]
# Use all defaults for now, but keep the header to indicate usage of black

[tool.unimport]
ignore_init = true
